<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".StepActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_step_navigation"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center">

            <ImageButton
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:id="@+id/button_previous"
                android:src="@drawable/round_navigate_before_black_48dp" />

            <TextView
                android:id="@+id/textview_stepnum"
                android:layout_height="48dp"
                android:layout_width="120dp"
                android:gravity="center"/>

            <ImageButton
                android:id="@+id/button_next"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:src="@drawable/round_navigate_next_black_48dp"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/container_recipe_step_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </FrameLayout>

    </LinearLayout>
</ScrollView>