<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step_detail_linear_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RecipeStepDetailFragment">

    <RelativeLayout
        android:id="@+id/step_detail_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="280dp">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/recipe_exoplayer_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/no_media_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <TextView
        android:id="@+id/step_desc_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>