<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.RecipeFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/no_recipes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:textAppearanceMedium" />

    <ProgressBar
        android:id="@+id/loading_indicator"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:indeterminate="true" />
</LinearLayout>